--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Барбершоп «Бородинский»</title>
   </head>
   <body>
-    <header class="main-header">
+    <header class="site-header">
       <div class="container">
         <nav class="main-navigation">
           <ul>
