--- a/shop.html
+++ b/shop.html
@@ -37,7 +37,7 @@
   <main class="container">
     <header class="page-header">
       <h1 class="page-header-title">Средства для ухода</h1>
-      <div class="breadcrumbs">
+      <nav class="breadcrumbs">
         <ul>
           <li>
             <a href="#">Главная</a>
@@ -49,7 +49,7 @@
             <a href="#">Средства для ухода</a>
           </li>
         </ul>
-      </div>
+      </nav>
     </header>
     <section class="filter">
       <section class="filter-manufacturers">
