Поправки для валидации и подключение css

--- a/item.html
+++ b/item.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Барбершоп «Бородинский»</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="site-header">
@@ -54,7 +56,7 @@
         </ul>
       </nav>
     </header>
-    <section class="images">
+    <div class="images">
       <div class="active-image">
         <img src="http://placehold.it/500x700" width="500" height="700" alt="Набор для путешествий &#171;Baxter of California&#187;">
       </div>
@@ -67,8 +69,8 @@
       <div class="image">
         <img src="http://placehold.it/150x150" width="150" height="150" alt="Набор для путешествий &#171;Baxter of California&#187;">
       </div>
-    </section>
-    <section class="description">
+    </div>
+    <div class="description">
       <span class="description-available">Есть в наличии</span>
       <span class="description-vendor-code">Артикул: Dexter-AE</span>
       <p class="description-main">Travel Kit - необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится всё,
@@ -76,9 +78,9 @@
         крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
       <span class="description-price">2 900 руб.</span>
       <a href="#" class="btn description-buy">Купить</a>
-    </section>
-    <section class="composition">
-      <h1 class="composition-title">В набор входят:</h1>
+    </div>
+    <div class="composition">
+      <span class="composition-title">В набор входят:</span>
       <ul class="composition-list">
         <li>Средство для умывания (50 мл)</li>
         <li>Увлажняющий крем (50 мл)</li>
@@ -86,26 +88,26 @@
         <li>Крем после бритья, шампунь (50 мл)</li>
         <li>Удобная кожаная косметичка</li>
       </ul>
-    </section>
+    </div>
   </main>
   <footer class="main-footer">
     <div class="container">
-      <section class="footer-contacts">
+      <div class="footer-contacts">
         Барбершоп «Бородинский»<br>
         Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
         <a href="#">Как нас найти?</a><br>
         Телефон: +7 (812) 666-02-66
-      </section>
-      <section class="footer-social">
+      </div>
+      <div class="footer-social">
         <p>Давайте дружить!</p>
         <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
         <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
         <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-      </section>
-      <section class="footer-copyright">
+      </div>
+      <div class="footer-copyright">
         <p>Разработано:</p>
         <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
-      </section>
+      </div>
     </div>
   </footer>
 </body>
