--- a/shop.html
+++ b/shop.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Барбершоп «Бородинский»</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="site-header">
@@ -51,9 +53,9 @@
         </ul>
       </nav>
     </header>
-    <section class="filter">
+    <div class="filter">
       <section class="filter-manufacturers">
-        <h1 class="filter-manufacturers-title">Производители:</h1>
+        <h2 class="filter-manufacturers-title">Производители:</h2>
         <label class="filter-manufacturers-condition">
           <input type="checkbox" name="Baxter of California" checked>
           Baxter of California
@@ -80,7 +82,7 @@
         </label>
       </section>
       <section class="filter-groups-of-items">
-        <h1 class="filter-groups-of-items-title">Группы товаров:</h1>
+        <h2 class="filter-groups-of-items-title">Группы товаров:</h2>
         <label class="filter-groups-of-items-condition">
           <input type="checkbox" name="Бритвенные принадлежности">
           Бритвенные принадлежности
@@ -95,14 +97,16 @@
         </label>
       </section>
       <a class="btn filter-show-result" href="#">Показать</a>
-    </section>
-    <section class="items">
+    </div>
+    <div class="items">
       <article class="item">
         <div class="item-image">
           <img src="http://placehold.it/150x100" width="150" height="100" alt="Набор для путешествий &#171;Baxter of California&#187;">
         </div>
-        <span class="item-description">Набор для путешествий</span>
-        <span class="item-manufacturer">&#171;Baxter of California&#187;</span>
+        <h2 class="item-title">
+          Набор для путешествий
+          <span class="item-title-manufacturer">&#171;Baxter of California&#187;</span>
+        </h2>
         <span class="item-price">2 900 руб.</span>
         <a href="#" class="btn item-buy">Купить</a>
       </article>
@@ -110,8 +114,10 @@
         <div class="item-image">
           <img src="http://placehold.it/150x100" width="150" height="100" alt="Увлажняющий кондиционер &#171;Baxter of California&#187;">
         </div>
-        <span class="item-description">Увлажняющий кондиционер</span>
-        <span class="item-manufacturer">&#171;Baxter of California&#187;</span>
+        <h2 class="item-title">
+          Увлажняющий кондиционер
+          <span class="item-title-manufacturer">&#171;Baxter of California&#187;</span>
+        </h2>
         <span class="item-price">750 руб.</span>
         <a href="#" class="btn item-buy">Купить</a>
       </article>
@@ -119,8 +125,10 @@
         <div class="item-image">
           <img src="http://placehold.it/150x100" width="150" height="100" alt="Гель для волос &#171;Suavecito&#187;">
         </div>
-        <span class="item-description">Гель для волос</span>
-        <span class="item-manufacturer">&#171;Suavecito&#187;</span>
+        <h2 class="item-title">
+          Гель для волос
+          <span class="item-title-manufacturer">&#171;Suavecito&#187;</span>
+        </h2>
         <span class="item-price">290 руб.</span>
         <a href="#" class="btn item-buy">Купить</a>
       </article>
@@ -128,8 +136,10 @@
         <div class="item-image">
           <img src="http://placehold.it/150x100" width="150" height="100" alt="Глина для укладки волос &#171;American crew&#187;">
         </div>
-        <span class="item-description">Глина для укладки волос</span>
-        <span class="item-manufacturer">&#171;American crew&#187;</span>
+        <h2 class="item-title">
+          Глина для укладки волос
+          <span class="item-title-manufacturer">&#171;American crew&#187;</span>
+        </h2>
         <span class="item-price">500 руб.</span>
         <a href="#" class="btn item-buy">Купить</a>
       </article>
@@ -137,8 +147,10 @@
         <div class="item-image">
           <img src="http://placehold.it/150x100" width="150" height="100" alt="Гель для волос &#171;American crew&#187;">
         </div>
-        <span class="item-description">Гель для волос</span>
-        <span class="item-manufacturer">&#171;American crew&#187;</span>
+        <h2 class="item-title">
+          Гель для волос
+          <span class="item-title-manufacturer">&#171;American crew&#187;</span>
+        </h2>
         <span class="item-price">300 руб.</span>
         <a href="#" class="btn item-buy">Купить</a>
       </article>
@@ -146,8 +158,10 @@
         <div class="item-image">
           <img src="http://placehold.it/150x100" width="150" height="100" alt="Набор для бритья &#171;Baxter of California&#187;">
         </div>
-        <span class="item-description">Набор для бритья</span>
-        <span class="item-manufacturer">&#171;Baxter of California&#187;</span>
+        <h2 class="item-title">
+          Набор для бритья
+          <span class="item-title-manufacturer">&#171;Baxter of California&#187;</span>
+        </h2>
         <span class="item-price">3 900 руб.</span>
         <a href="#" class="btn item-buy">Купить</a>
       </article>
@@ -167,26 +181,26 @@
           </li>
         </ul>
       </div>
-    </section>
+    </div>
   </main>
   <footer class="main-footer">
     <div class="container">
-      <section class="footer-contacts">
+      <div class="footer-contacts">
         Барбершоп «Бородинский»<br>
         Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
         <a href="#">Как нас найти?</a><br>
         Телефон: +7 (812) 666-02-66
-      </section>
-      <section class="footer-social">
+      </div>
+      <div class="footer-social">
         <p>Давайте дружить!</p>
         <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
         <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
         <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-      </section>
-      <section class="footer-copyright">
+      </div>
+      <div class="footer-copyright">
         <p>Разработано:</p>
         <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
-      </section>
+      </div>
     </div>
   </footer>
 </body>
