В ссылках атрибут class поставил первым

--- a/item.html
+++ b/item.html
@@ -77,7 +77,7 @@
         что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья,
         крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
       <span class="description-price">2 900 руб.</span>
-      <a href="#" class="btn description-buy">Купить</a>
+      <a class="btn description-buy" href="#">Купить</a>
     </div>
     <div class="composition">
       <span class="composition-title">В набор входят:</span>
