--- a/shop.html
+++ b/shop.html
@@ -108,7 +108,7 @@
           <span class="item-title-manufacturer">&#171;Baxter of California&#187;</span>
         </h2>
         <span class="item-price">2 900 руб.</span>
-        <a href="#" class="btn item-buy">Купить</a>
+        <a class="btn item-buy" href="#">Купить</a>
       </article>
       <article class="item">
         <div class="item-image">
@@ -119,7 +119,7 @@
           <span class="item-title-manufacturer">&#171;Baxter of California&#187;</span>
         </h2>
         <span class="item-price">750 руб.</span>
-        <a href="#" class="btn item-buy">Купить</a>
+        <a class="btn item-buy" href="#">Купить</a>
       </article>
       <article class="item">
         <div class="item-image">
@@ -130,7 +130,7 @@
           <span class="item-title-manufacturer">&#171;Suavecito&#187;</span>
         </h2>
         <span class="item-price">290 руб.</span>
-        <a href="#" class="btn item-buy">Купить</a>
+        <a class="btn item-buy" href="#">Купить</a>
       </article>
       <article class="item">
         <div class="item-image">
@@ -141,7 +141,7 @@
           <span class="item-title-manufacturer">&#171;American crew&#187;</span>
         </h2>
         <span class="item-price">500 руб.</span>
-        <a href="#" class="btn item-buy">Купить</a>
+        <a class="btn item-buy" href="#">Купить</a>
       </article>
       <article class="item">
         <div class="item-image">
@@ -152,7 +152,7 @@
           <span class="item-title-manufacturer">&#171;American crew&#187;</span>
         </h2>
         <span class="item-price">300 руб.</span>
-        <a href="#" class="btn item-buy">Купить</a>
+        <a class="btn item-buy" href="#">Купить</a>
       </article>
       <article class="item">
         <div class="item-image">
@@ -163,7 +163,7 @@
           <span class="item-title-manufacturer">&#171;Baxter of California&#187;</span>
         </h2>
         <span class="item-price">3 900 руб.</span>
-        <a href="#" class="btn item-buy">Купить</a>
+        <a class="btn item-buy" href="#">Купить</a>
       </article>
       <div class="items-paginator">
         <ul>
