Исправил section's на форму в filter

--- a/shop.html
+++ b/shop.html
@@ -54,49 +54,47 @@
       </nav>
     </header>
     <div class="filter">
-      <section class="filter-manufacturers">
-        <h2 class="filter-manufacturers-title">Производители:</h2>
-        <label class="filter-manufacturers-condition">
+      <form class="filter-conditions" action="#" method="POST">
+        <h2 class="filter-conditions-title">Производители:</h2>
+        <label class="filter-condition">
           <input type="checkbox" name="Baxter of California" checked>
           Baxter of California
         </label>
-        <label class="filter-manufacturers-condition">
+        <label class="filter-condition">
           <input type="checkbox" name="Mr Natty">
           Mr Natty
         </label>
-        <label class="filter-manufacturers-condition">
+        <label class="filter-condition">
           <input type="checkbox" name="Suavecito" checked>
           Suavecito
         </label>
-        <label class="filter-manufacturers-condition">
+        <label class="filter-condition">
           <input type="checkbox" name="Malin+Goetz">
           Malin+Goetz
         </label>
-        <label class="filter-manufacturers-condition">
+        <label class="filter-condition">
           <input type="checkbox" name="Murray's">
           Murray's
         </label>
-        <label class="filter-manufacturers-condition">
+        <label class="filter-condition">
           <input type="checkbox" name="American crew" checked>
           American crew
         </label>
-      </section>
-      <section class="filter-groups-of-items">
-        <h2 class="filter-groups-of-items-title">Группы товаров:</h2>
-        <label class="filter-groups-of-items-condition">
+        <h2 class="filter-conditions-title">Группы товаров:</h2>
+        <label class="filter-condition">
           <input type="checkbox" name="Бритвенные принадлежности">
           Бритвенные принадлежности
         </label>
-        <label class="filter-groups-of-items-condition">
+        <label class="filter-condition">
           <input type="checkbox" name="Средства для ухода" checked>
           Средства для ухода
         </label>
-        <label class="filter-groups-of-items-condition">
+        <label class="filter-condition">
           <input type="checkbox" name="Аксессуары">
           Аксессуары
         </label>
-      </section>
-      <a class="btn filter-show-result" href="#">Показать</a>
+        <button class="btn filter-show-result" type="submit">Показать</button>
+      </form>
     </div>
     <div class="items">
       <article class="item">
