--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="site-header">
       <div class="container">
-        <nav class="main-navigation">
+        <nav class="site-navigation">
           <ul>
             <li>
               <a href="#">Информация</a>
@@ -29,31 +29,34 @@
           </ul>
         </nav>
         <div class="user-block">
-          <a class="login" href="#">Вход</a>
+          <a class="user-block__login" href="#">Вход</a>
         </div>
       </div>
     </header>
+
     <main class="container">
       <div class="index-logo">
         <img src="img/index-logo.png" width="368" height="204" alt="Барбершоп «Бородинский»">
       </div>
+
       <div class="features">
-        <div class="features-item">
-          <b class="features-name">Быстро</b>
+        <div class="features__item">
+          <b class="features__name">Быстро</b>
           <p>Мы делаем свою работу быстро! Два часа пролетят незаметно и вы — счастливый обладатель стильной стрижки-минутки!</p>
         </div>
-        <div class="features-item">
-          <b class="features-name">Круто</b>
+        <div class="features__item">
+          <b class="features__name">Круто</b>
           <p>Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду футбола или кино! Во всяком случае внешне.</p>
         </div>
-        <div class="features-item">
-          <b class="features-name">Дорого</b>
+        <div class="features__item">
+          <b class="features__name">Дорого</b>
           <p>Наши мастера — профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
         </div>
       </div>
+
       <div class="index-content">
-        <div class="index-content-left">
-          <h2 class="index-content-title">Новости</h2>
+        <div class="index-content--left">
+          <h2 class="index-content__title">Новости</h2>
           <ul class="news-preview">
             <li>
               <p>Нам наконец завезли Ягермайстер! Теперь вы можете пропустить стаканчик во время стрижки</p>
@@ -66,20 +69,22 @@
           </ul>
           <a class="btn" href="#">Все новости</a>
         </div>
-        <div class="index-content-right">
-          <h2 class="index-content-title">Фотогалерея</h2>
+
+        <div class="index-content--right">
+          <h2 class="index-content__title">Фотогалерея</h2>
           <div class="gallery">
-            <figure class="gallery-content">
+            <figure class="gallery__content">
               <img src="img/photo-1.jpg" width="286" height="164" alt="">
             </figure>
-            <button class="btn gallery-prev">Назад</button>
-            <button class="btn gallery-next">Вперёд</button>
+            <button class="btn btn--prev">Назад</button>
+            <button class="btn btn--next">Вперёд</button>
           </div>
         </div>
       </div>
+
       <div class="index-content">
-        <div class="index-content-left">
-          <h2 class="index-content-title">Контактная информация</h2>
+        <div class="index-content--left">
+          <h2 class="index-content__title">Контактная информация</h2>
           <p>
             Барбершоп «Бородинский»<br>
             Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
@@ -93,8 +98,9 @@
           <a class="btn" href="#">Как проехать</a>
           <a class="btn" href="#">Обратная связь</a>
         </div>
-        <div class="index-content-right">
-          <h2 class="index-content-title">Записаться</h2>
+
+        <div class="index-content--right">
+          <h2 class="index-content__title">Записаться</h2>
           <p>Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
           <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
             <input type="text" name="date" value="" placeholder="Дата">
@@ -106,21 +112,23 @@
         </div>
       </div>
     </main>
-    <footer class="main-footer">
+    <footer class="site__footer">
       <div class="container">
-        <div class="footer-contacts">
+        <div class="site-footer__contacts">
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
           <a href="#">Как нас найти?</a><br>
           Телефон: +7 (812) 666-02-66
         </div>
-        <div class="footer-social">
+
+        <div class="site-footer__social">
           <p>Давайте дружить!</p>
-          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+          <a class="social-btn social-btn--vk" href="#">Вконтакте</a>
+          <a class="social-btn social-btn--fb" href="#">Фейсбук</a>
+          <a class="social-btn social-btn--inst" href="#">Инстаграм</a>
         </div>
-        <div class="footer-copyright">
+
+        <div class="site-footer__copyright">
           <p>Разработано:</p>
           <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
         </div>
