--- a/shop.html
+++ b/shop.html
@@ -1,205 +1,218 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <title>Барбершоп «Бородинский»</title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <header class="site-header">
-    <div class="container">
-      <nav class="main-navigation">
-        <ul>
-          <li>
-            <a href="#"><img src="http://placehold.it/200x50" width="200" height="50" alt="Barbershop"></a>
-          </li>
-          <li>
-            <a href="#">Информация</a>
-          </li>
-          <li>
-            <a href="#">Новости</a>
-          </li>
-          <li>
-            <a href="#">Прайс-лист</a>
-          </li>
-          <li>
-            <a href="#">Магазин</a>
-          </li>
-          <li>
-            <a href="#">Контакты</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="user-block">
-        <a class="login" href="#">Вход</a>
+  <head>
+    <meta charset="UTF-8">
+    <title>Барбершоп «Бородинский»</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    <header class="site-header">
+      <div class="container">
+        <div class="logo">
+          <a class="logo__link" href="#">
+            <img class="logo__picture" src="http://placehold.it/200x50" width="200" height="50" alt="Barbershop">
+          </a>
+        </div>
+        <nav class="site-navigation">
+          <ul>
+            <li>
+              <a href="#">Информация</a>
+            </li>
+            <li>
+              <a href="#">Новости</a>
+            </li>
+            <li>
+              <a href="#">Прайс-лист</a>
+            </li>
+            <li>
+              <a href="#">Магазин</a>
+            </li>
+            <li>
+              <a href="#">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="user-block">
+          <a class="user-block__login" href="#">Вход</a>
+        </div>
       </div>
-    </div>
-  </header>
-  <main class="container">
-    <header class="page-header">
-      <h1 class="page-header-title">Средства для ухода</h1>
-      <nav class="breadcrumbs">
-        <ul>
-          <li>
-            <a href="#">Главная</a>
-          </li>
-          <li>
-            <a href="#">Магазин</a>
-          </li>
-          <li>
-            <a href="#">Средства для ухода</a>
-          </li>
-        </ul>
-      </nav>
     </header>
-    <div class="filter">
-      <form class="filter-conditions" action="#" method="POST">
-        <h2 class="filter-conditions-title">Производители:</h2>
-        <label class="filter-condition">
-          <input type="checkbox" name="Baxter of California" checked>
-          Baxter of California
-        </label>
-        <label class="filter-condition">
-          <input type="checkbox" name="Mr Natty">
-          Mr Natty
-        </label>
-        <label class="filter-condition">
-          <input type="checkbox" name="Suavecito" checked>
-          Suavecito
-        </label>
-        <label class="filter-condition">
-          <input type="checkbox" name="Malin+Goetz">
-          Malin+Goetz
-        </label>
-        <label class="filter-condition">
-          <input type="checkbox" name="Murray's">
-          Murray's
-        </label>
-        <label class="filter-condition">
-          <input type="checkbox" name="American crew" checked>
-          American crew
-        </label>
-        <h2 class="filter-conditions-title">Группы товаров:</h2>
-        <label class="filter-condition">
-          <input type="checkbox" name="Бритвенные принадлежности">
-          Бритвенные принадлежности
-        </label>
-        <label class="filter-condition">
-          <input type="checkbox" name="Средства для ухода" checked>
-          Средства для ухода
-        </label>
-        <label class="filter-condition">
-          <input type="checkbox" name="Аксессуары">
-          Аксессуары
-        </label>
-        <button class="btn filter-show-result" type="submit">Показать</button>
-      </form>
-    </div>
-    <div class="items">
-      <article class="item">
-        <div class="item-image">
-          <img src="http://placehold.it/150x100" width="150" height="100" alt="Набор для путешествий &#171;Baxter of California&#187;">
-        </div>
-        <h2 class="item-title">
-          Набор для путешествий
-          <span class="item-title-manufacturer">&#171;Baxter of California&#187;</span>
-        </h2>
-        <span class="item-price">2 900 руб.</span>
-        <a class="btn item-buy" href="#">Купить</a>
-      </article>
-      <article class="item">
-        <div class="item-image">
-          <img src="http://placehold.it/150x100" width="150" height="100" alt="Увлажняющий кондиционер &#171;Baxter of California&#187;">
-        </div>
-        <h2 class="item-title">
-          Увлажняющий кондиционер
-          <span class="item-title-manufacturer">&#171;Baxter of California&#187;</span>
-        </h2>
-        <span class="item-price">750 руб.</span>
-        <a class="btn item-buy" href="#">Купить</a>
-      </article>
-      <article class="item">
-        <div class="item-image">
-          <img src="http://placehold.it/150x100" width="150" height="100" alt="Гель для волос &#171;Suavecito&#187;">
-        </div>
-        <h2 class="item-title">
-          Гель для волос
-          <span class="item-title-manufacturer">&#171;Suavecito&#187;</span>
-        </h2>
-        <span class="item-price">290 руб.</span>
-        <a class="btn item-buy" href="#">Купить</a>
-      </article>
-      <article class="item">
-        <div class="item-image">
-          <img src="http://placehold.it/150x100" width="150" height="100" alt="Глина для укладки волос &#171;American crew&#187;">
-        </div>
-        <h2 class="item-title">
-          Глина для укладки волос
-          <span class="item-title-manufacturer">&#171;American crew&#187;</span>
-        </h2>
-        <span class="item-price">500 руб.</span>
-        <a class="btn item-buy" href="#">Купить</a>
-      </article>
-      <article class="item">
-        <div class="item-image">
-          <img src="http://placehold.it/150x100" width="150" height="100" alt="Гель для волос &#171;American crew&#187;">
-        </div>
-        <h2 class="item-title">
-          Гель для волос
-          <span class="item-title-manufacturer">&#171;American crew&#187;</span>
-        </h2>
-        <span class="item-price">300 руб.</span>
-        <a class="btn item-buy" href="#">Купить</a>
-      </article>
-      <article class="item">
-        <div class="item-image">
-          <img src="http://placehold.it/150x100" width="150" height="100" alt="Набор для бритья &#171;Baxter of California&#187;">
-        </div>
-        <h2 class="item-title">
-          Набор для бритья
-          <span class="item-title-manufacturer">&#171;Baxter of California&#187;</span>
-        </h2>
-        <span class="item-price">3 900 руб.</span>
-        <a class="btn item-buy" href="#">Купить</a>
-      </article>
-      <div class="items-paginator">
-        <ul>
-          <li class="btn">
-            <a href="#">1</a>
-          </li>
-          <li class="btn active-page">
-            <a href="#">2</a>
-          </li>
-          <li class="btn">
-            <a href="#">3</a>
-          </li>
-          <li class="btn">
-            <a href="#">4</a>
-          </li>
-        </ul>
+
+    <main class="container">
+      <header class="page-header">
+        <h1 class="page-header__title">Средства для ухода</h1>
+        <nav class="breadcrumbs">
+          <ul>
+            <li>
+              <a href="#">Главная</a>
+            </li>
+            <li>
+              <a href="#">Магазин</a>
+            </li>
+            <li>
+              <a href="#">Средства для ухода</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+
+      <div class="filter">
+        <form class="filter__form" action="#" method="POST">
+          <h2 class="filter__title">Производители:</h2>
+          <label class="filter__condition">
+            <input type="checkbox" name="Baxter of California" checked>
+            Baxter of California
+          </label>
+          <label class="filter__condition">
+            <input type="checkbox" name="Mr Natty">
+            Mr Natty
+          </label>
+          <label class="filter__condition">
+            <input type="checkbox" name="Suavecito" checked>
+            Suavecito
+          </label>
+          <label class="filter__condition">
+            <input type="checkbox" name="Malin+Goetz">
+            Malin+Goetz
+          </label>
+          <label class="filter__condition">
+            <input type="checkbox" name="Murray's">
+            Murray's
+          </label>
+          <label class="filter__condition">
+            <input type="checkbox" name="American crew" checked>
+            American crew
+          </label>
+          <h2 class="filter__title">Группы товаров:</h2>
+          <label class="filter__condition">
+            <input type="checkbox" name="Бритвенные принадлежности">
+            Бритвенные принадлежности
+          </label>
+          <label class="filter__condition">
+            <input type="checkbox" name="Средства для ухода" checked>
+            Средства для ухода
+          </label>
+          <label class="filter__condition">
+            <input type="checkbox" name="Аксессуары">
+            Аксессуары
+          </label>
+          <button class="btn filter__btn" type="submit">Показать</button>
+        </form>
       </div>
-    </div>
-  </main>
-  <footer class="main-footer">
-    <div class="container">
-      <div class="footer-contacts">
-        Барбершоп «Бородинский»<br>
-        Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-        <a href="#">Как нас найти?</a><br>
-        Телефон: +7 (812) 666-02-66
+
+      <div class="items">
+        <article class="item">
+          <div class="item__image">
+            <img src="http://placehold.it/150x100" width="150" height="100" alt="Набор для путешествий &#171;Baxter of California&#187;">
+          </div>
+          <h2 class="item__title">
+            Набор для путешествий
+            <span class="item__title--manufacturer">&#171;Baxter of California&#187;</span>
+          </h2>
+          <span class="item__price">2 900 руб.</span>
+          <a class="btn btn--buy" href="#">Купить</a>
+        </article>
+
+        <article class="item">
+          <div class="item__image">
+            <img src="http://placehold.it/150x100" width="150" height="100" alt="Увлажняющий кондиционер &#171;Baxter of California&#187;">
+          </div>
+          <h2 class="item__title">
+            Увлажняющий кондиционер
+            <span class="item__title--manufacturer">&#171;Baxter of California&#187;</span>
+          </h2>
+          <span class="item__price">750 руб.</span>
+          <a class="btn btn--buy" href="#">Купить</a>
+        </article>
+
+        <article class="item">
+          <div class="item__image">
+            <img src="http://placehold.it/150x100" width="150" height="100" alt="Гель для волос &#171;Suavecito&#187;">
+          </div>
+          <h2 class="item__title">
+            Гель для волос
+            <span class="item__title--manufacturer">&#171;Suavecito&#187;</span>
+          </h2>
+          <span class="item__price">290 руб.</span>
+          <a class="btn btn--buy" href="#">Купить</a>
+        </article>
+
+        <article class="item">
+          <div class="item__image">
+            <img src="http://placehold.it/150x100" width="150" height="100" alt="Глина для укладки волос &#171;American crew&#187;">
+          </div>
+          <h2 class="item__title">
+            Глина для укладки волос
+            <span class="item__title--manufacturer">&#171;American crew&#187;</span>
+          </h2>
+          <span class="item__price">500 руб.</span>
+          <a class="btn btn--buy" href="#">Купить</a>
+        </article>
+
+        <article class="item">
+          <div class="item__image">
+            <img src="http://placehold.it/150x100" width="150" height="100" alt="Гель для волос &#171;American crew&#187;">
+          </div>
+          <h2 class="item__title">
+            Гель для волос
+            <span class="item__title--manufacturer">&#171;American crew&#187;</span>
+          </h2>
+          <span class="item__price">300 руб.</span>
+          <a class="btn btn--buy" href="#">Купить</a>
+        </article>
+
+        <article class="item">
+          <div class="item__image">
+            <img src="http://placehold.it/150x100" width="150" height="100" alt="Набор для бритья &#171;Baxter of California&#187;">
+          </div>
+          <h2 class="item__title">
+            Набор для бритья
+            <span class="item__title--manufacturer">&#171;Baxter of California&#187;</span>
+          </h2>
+          <span class="item__price">3 900 руб.</span>
+          <a class="btn btn--buy" href="#">Купить</a>
+        </article>
+
+        <div class="items-paginator">
+          <ul>
+            <li class="btn">
+              <a href="#">1</a>
+            </li>
+            <li class="btn btn--active">
+              <a href="#">2</a>
+            </li>
+            <li class="btn">
+              <a href="#">3</a>
+            </li>
+            <li class="btn">
+              <a href="#">4</a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="footer-social">
-        <p>Давайте дружить!</p>
-        <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-        <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-        <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+    </main>
+    <footer class="site-footer">
+      <div class="container">
+        <div class="site-footer__contacts">
+          Барбершоп «Бородинский»<br>
+          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+          <a href="#">Как нас найти?</a><br>
+          Телефон: +7 (812) 666-02-66
+        </div>
+
+        <div class="site-footer__social">
+          <p>Давайте дружить!</p>
+          <a class="social-btn social-btn--vk" href="#">Вконтакте</a>
+          <a class="social-btn social-btn--fb" href="#">Фейсбук</a>
+          <a class="social-btn social-btn--inst" href="#">Инстаграм</a>
+        </div>
+
+        <div class="site-footer__copyright">
+          <p>Разработано:</p>
+          <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+        </div>
       </div>
-      <div class="footer-copyright">
-        <p>Разработано:</p>
-        <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
-      </div>
-    </div>
-  </footer>
-</body>
+    </footer>
+  </body>
 </html>
