--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <a href="#">Прайс-лист</a>
             </li>
             <li>
-              <a href="/shop.html">Магазин</a>
+              <a href="shop.html">Магазин</a>
             </li>
             <li>
               <a href="#">Контакты</a>
@@ -36,7 +36,7 @@
 
     <main class="container">
       <div class="logo logo--index">
-        <img src="img/index-logo.png" width="368" height="204" alt="Барбершоп «Бородинский»">
+        <img src="http://placehold.it/368x204" width="368" height="204" alt="Барбершоп «Бородинский»">
       </div>
 
       <div class="features">
@@ -77,7 +77,7 @@
           <div class="gallery">
             <figure class="gallery__content">
               <a class="gallery__link" href="#">
-                <img src="img/photo-1.jpg" width="286" height="164" alt="">
+                <img src="http://placehold.it/286x164" width="286" height="164" alt="">
               </a>
             </figure>
             <a class="btn btn--prev" href="#">Назад</a>
