--- a/item.html
+++ b/item.html
@@ -10,7 +10,7 @@
     <header class="site-header">
       <div class="container">
         <div class="logo logo--nav">
-          <a class="logo__link" href="/">
+          <a class="logo__link" href="index.html">
             <img class="logo__picture" src="http://placehold.it/200x50" width="200" height="50" alt="Barbershop">
           </a>
         </div>
@@ -26,7 +26,7 @@
               <a href="#">Прайс-лист</a>
             </li>
             <li>
-              <a href="/shop.html">Магазин</a>
+              <a href="shop.html">Магазин</a>
             </li>
             <li>
               <a href="#">Контакты</a>
@@ -45,16 +45,16 @@
         <nav class="breadcrumbs">
           <ul>
             <li>
-              <a href="/">Главная</a>
+              <a href="index.html">Главная</a>
             </li>
             <li>
-              <a href="/shop.html">Магазин</a>
+              <a href="shop.html">Магазин</a>
             </li>
             <li>
               <a href="#">Средства для ухода</a>
             </li>
             <li>
-              <a href="/item.html">Набор для путешествий &#171;Baxter of California&#187;</a>
+              <a href="item.html">Набор для путешествий &#171;Baxter of California&#187;</a>
             </li>
           </ul>
         </nav>
