--- a/shop.html
+++ b/shop.html
@@ -10,7 +10,7 @@
     <header class="site-header">
       <div class="container">
         <div class="logo logo--nav">
-          <a class="logo__link" href="/">
+          <a class="logo__link" href="index.html">
             <img class="logo__picture" src="http://placehold.it/200x50" width="200" height="50" alt="Barbershop">
           </a>
         </div>
@@ -26,7 +26,7 @@
               <a href="#">Прайс-лист</a>
             </li>
             <li>
-              <a href="/shop.html">Магазин</a>
+              <a href="shop.html">Магазин</a>
             </li>
             <li>
               <a href="#">Контакты</a>
@@ -45,10 +45,10 @@
         <nav class="breadcrumbs">
           <ul>
             <li>
-              <a href="/">Главная</a>
+              <a href="index.html">Главная</a>
             </li>
             <li>
-              <a href="/shop.html">Магазин</a>
+              <a href="shop.html">Магазин</a>
             </li>
             <li>
               <a href="#">Средства для ухода</a>
@@ -110,12 +110,12 @@
       <section class="items">
         <article class="item">
           <div class="item__image">
-            <a class="item__link" href="/item.html">
+            <a class="item__link" href="item.html">
               <img src="http://placehold.it/150x100" width="150" height="100" alt="Набор для путешествий &#171;Baxter of California&#187;">
             </a>
           </div>
           <h2 class="item__title">
-            <a class="item__link" href="/item.html">
+            <a class="item__link" href="item.html">
               Набор для путешествий
               <span class="item__title--manufacturer">&#171;Baxter of California&#187;</span>
             </a>
@@ -126,12 +126,12 @@
 
         <article class="item">
           <div class="item__image">
-            <a class="item__link" href="/item.html">
+            <a class="item__link" href="item.html">
               <img src="http://placehold.it/150x100" width="150" height="100" alt="Увлажняющий кондиционер &#171;Baxter of California&#187;">
             </a>
           </div>
           <h2 class="item__title">
-            <a class="item__link" href="/item.html">
+            <a class="item__link" href="item.html">
               Увлажняющий кондиционер
               <span class="item__title--manufacturer">&#171;Baxter of California&#187;</span>
             </a>
@@ -142,12 +142,12 @@
 
         <article class="item">
           <div class="item__image">
-            <a class="item__link" href="/item.html">
+            <a class="item__link" href="item.html">
               <img src="http://placehold.it/150x100" width="150" height="100" alt="Гель для волос &#171;Suavecito&#187;">
             </a>
           </div>
           <h2 class="item__title">
-            <a class="item__link" href="/item.html">
+            <a class="item__link" href="item.html">
               Гель для волос
               <span class="item__title--manufacturer">&#171;Suavecito&#187;</span>
             </a>
@@ -158,12 +158,12 @@
 
         <article class="item">
           <div class="item__image">
-            <a class="item__link" href="/item.html">
+            <a class="item__link" href="item.html">
               <img src="http://placehold.it/150x100" width="150" height="100" alt="Глина для укладки волос &#171;American crew&#187;">
             </a>
           </div>
           <h2 class="item__title">
-            <a class="item__link" href="/item.html">
+            <a class="item__link" href="item.html">
               Глина для укладки волос
               <span class="item__title--manufacturer">&#171;American crew&#187;</span>
             </a>
@@ -174,12 +174,12 @@
 
         <article class="item">
           <div class="item__image">
-            <a class="item__link" href="/item.html">
+            <a class="item__link" href="item.html">
               <img src="http://placehold.it/150x100" width="150" height="100" alt="Гель для волос &#171;American crew&#187;">
             </a>
           </div>
           <h2 class="item__title">
-            <a class="item__link" href="/item.html">
+            <a class="item__link" href="item.html">
               Гель для волос
               <span class="item__title--manufacturer">&#171;American crew&#187;</span>
             </a>
@@ -190,12 +190,12 @@
 
         <article class="item">
           <div class="item__image">
-            <a class="item__link" href="/item.html">
+            <a class="item__link" href="item.html">
               <img src="http://placehold.it/150x100" width="150" height="100" alt="Набор для бритья &#171;Baxter of California&#187;">
             </a>
           </div>
           <h2 class="item__title">
-            <a class="item__link" href="/item.html">
+            <a class="item__link" href="item.html">
               Набор для бритья
               <span class="item__title--manufacturer">&#171;Baxter of California&#187;</span>
             </a>
