Убрал ссылки в хлебных хрошках и пагинации у текущей страницы

--- a/shop.html
+++ b/shop.html
@@ -51,7 +51,7 @@
               <a href="shop.html">Магазин</a>
             </li>
             <li>
-              <a href="#">Средства для ухода</a>
+              Средства для ухода
             </li>
           </ul>
         </nav>
@@ -210,7 +210,7 @@
               <a href="#">1</a>
             </li>
             <li class="btn btn--active">
-              <a href="#">2</a>
+              2
             </li>
             <li class="btn">
               <a href="#">3</a>
