--- a/item.html
+++ b/item.html
@@ -54,7 +54,7 @@
               <a href="#">Средства для ухода</a>
             </li>
             <li>
-              <a href="item.html">Набор для путешествий &#171;Baxter of California&#187;</a>
+              Набор для путешествий &#171;Baxter of California&#187;
             </li>
           </ul>
         </nav>
