--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <main class="container">
       <div class="logo logo--index">
-        <img src="http://placehold.it/368x204" width="368" height="204" alt="Барбершоп «Бородинский»">
+        <img src="img/BORODINSKI Logo.png" width="368" height="204" alt="Барбершоп «Бородинский»">
       </div>
 
       <div class="features">
@@ -77,7 +77,7 @@
           <div class="gallery">
             <figure class="gallery__content">
               <a class="gallery__link" href="#">
-                <img src="http://placehold.it/286x164" width="286" height="164" alt="">
+                <img src="img/gallery_img.jpg" width="286" height="164" alt="">
               </a>
             </figure>
             <a class="btn btn--prev" href="#">Назад</a>
