--- a/item.html
+++ b/item.html
@@ -11,7 +11,7 @@
       <div class="container">
         <div class="logo logo--nav">
           <a class="logo__link" href="index.html">
-            <img class="logo__picture" src="http://placehold.it/200x50" width="200" height="50" alt="Barbershop">
+            <img class="logo__picture" src="img/Logo.gif" width="111" height="24" alt="Barbershop">
           </a>
         </div>
         <nav class="site-navigation">
@@ -62,16 +62,16 @@
 
       <section class="images">
         <div class="image image--big">
-          <img src="http://placehold.it/500x700" width="500" height="700" alt="Набор для путешествий &#171;Baxter of California&#187;">
+          <img src="img/item1.jpg" width="460" height="498" alt="Набор для путешествий &#171;Baxter of California&#187;">
         </div>
         <div class="image">
-          <img src="http://placehold.it/150x150" width="150" height="150" alt="Набор для путешествий &#171;Baxter of California&#187;">
+          <img src="img/item1-1.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
         </div>
         <div class="image">
-          <img src="http://placehold.it/150x150" width="150" height="150" alt="Набор для путешествий &#171;Baxter of California&#187;">
+          <img src="img/item1-2.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
         </div>
         <div class="image">
-          <img src="http://placehold.it/150x150" width="150" height="150" alt="Набор для путешествий &#171;Baxter of California&#187;">
+          <img src="img/item1.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
         </div>
       </section>
 
