Исправил названия картинок

--- a/item.html
+++ b/item.html
@@ -11,7 +11,7 @@
       <div class="container">
         <div class="logo logo--nav">
           <a class="logo__link" href="index.html">
-            <img class="logo__picture" src="img/Logo.gif" width="111" height="24" alt="Barbershop">
+            <img class="logo__picture" src="img/logo.gif" width="111" height="24" alt="Barbershop">
           </a>
         </div>
         <nav class="site-navigation">
