--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <main class="container">
       <div class="logo logo--index">
-        <img src="img/big_logo.png" width="368" height="204" alt="Барбершоп «Бородинский»">
+        <img src="img/pic__logo--index.png" width="368" height="204" alt="Барбершоп «Бородинский»">
       </div>
 
       <div class="features">
@@ -74,7 +74,7 @@
           <h2 class="content__title">Фотогалерея</h2>
           <figure class="content__gallery">
             <a class="content__link" href="#">
-              <img src="img/interier1.jpg" width="286" height="164" alt="Интерьер">
+              <img src="img/pic__gallery--1.jpg" width="286" height="164" alt="Интерьер">
             </a>
           </figure>
           <a class="btn btn--prev" href="#">Назад</a>
