--- a/shop.html
+++ b/shop.html
@@ -11,7 +11,7 @@
       <div class="container">
         <div class="logo logo--nav">
           <a class="logo__link" href="index.html">
-            <img class="logo__picture" src="img/logo.gif" width="111" height="24" alt="Barbershop">
+            <img class="logo__picture" src="img/pic__logo--header.gif" width="111" height="24" alt="Barbershop">
           </a>
         </div>
 
@@ -112,7 +112,7 @@
         <article class="item">
           <div class="item__image">
             <a class="item__link" href="item.html">
-              <img src="img/item1.jpg" width="220" height="165" alt="Набор для путешествий &#171;Baxter of California&#187;">
+              <img src="img/pic__item--1.jpg" width="220" height="165" alt="Набор для путешествий &#171;Baxter of California&#187;">
             </a>
           </div>
           <h2 class="item__title">
@@ -128,7 +128,7 @@
         <article class="item">
           <div class="item__image">
             <a class="item__link" href="item.html">
-              <img src="img/item2.jpg" width="220" height="165" alt="Увлажняющий кондиционер &#171;Baxter of California&#187;">
+              <img src="img/pic__item--2.jpg" width="220" height="165" alt="Увлажняющий кондиционер &#171;Baxter of California&#187;">
             </a>
           </div>
           <h2 class="item__title">
@@ -144,7 +144,7 @@
         <article class="item">
           <div class="item__image">
             <a class="item__link" href="item.html">
-              <img src="img/item3.jpg" width="220" height="165" alt="Гель для волос &#171;Suavecito&#187;">
+              <img src="img/pic__item--3.jpg" width="220" height="165" alt="Гель для волос &#171;Suavecito&#187;">
             </a>
           </div>
           <h2 class="item__title">
@@ -160,7 +160,7 @@
         <article class="item">
           <div class="item__image">
             <a class="item__link" href="item.html">
-              <img src="img/item4.jpg" width="220" height="165" alt="Глина для укладки волос &#171;American crew&#187;">
+              <img src="img/pic__item--4.jpg" width="220" height="165" alt="Глина для укладки волос &#171;American crew&#187;">
             </a>
           </div>
           <h2 class="item__title">
@@ -176,7 +176,7 @@
         <article class="item">
           <div class="item__image">
             <a class="item__link" href="item.html">
-              <img src="img/item5.jpg" width="220" height="165" alt="Гель для волос &#171;American crew&#187;">
+              <img src="img/pic__item--5.jpg" width="220" height="165" alt="Гель для волос &#171;American crew&#187;">
             </a>
           </div>
           <h2 class="item__title">
@@ -192,7 +192,7 @@
         <article class="item">
           <div class="item__image">
             <a class="item__link" href="item.html">
-              <img src="img/item6.jpg" width="220" height="165" alt="Набор для бритья &#171;Baxter of California&#187;">
+              <img src="img/pic__item--6.jpg" width="220" height="165" alt="Набор для бритья &#171;Baxter of California&#187;">
             </a>
           </div>
           <h2 class="item__title">
