Переименование картинок ещё одно

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <h2 class="content__title">Фотогалерея</h2>
           <figure class="content__gallery">
             <a class="content__link" href="#">
-              <img src="img/pic__gallery--1.jpg" width="286" height="164" alt="Интерьер">
+              <img src="img/pic__gallery.jpg" width="286" height="164" alt="Интерьер">
             </a>
           </figure>
           <a class="btn btn--prev" href="#">Назад</a>
