--- a/item.html
+++ b/item.html
@@ -10,8 +10,8 @@
     <header class="site-header">
       <div class="container">
         <div class="logo logo--nav">
-          <a class="logo__link" href="index.html">
-            <img class="logo__picture" src="img/pic__logo--header.gif" width="111" height="24" alt="Barbershop">
+          <a href="index.html">
+            <img src="img/pic__logo--header.gif" width="111" height="24" alt="Barbershop">
           </a>
         </div>
         <nav class="site-navigation">
@@ -33,8 +33,8 @@
             </li>
           </ul>
         </nav>
-        <div class="user-block">
-          <a class="user-block__login" href="#">Вход</a>
+        <div class="user">
+          <a class="user__login" href="#">Вход</a>
         </div>
       </div>
     </header>
