--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             </li>
           </ul>
         </nav>
-        <div class="user-block">
-          <a class="user-block__login" href="#">Вход</a>
+        <div class="user">
+          <a class="user__login" href="#">Вход</a>
         </div>
       </div>
     </header>
@@ -74,7 +74,7 @@
           <h2 class="content__title">Фотогалерея</h2>
           <figure class="content__gallery">
             <a class="content__link" href="#">
-              <img src="img/pic__gallery.jpg" width="286" height="164" alt="Интерьер">
+              <img src="img/pic__gallery--barbershop-borodinski-room.jpg" width="286" height="164" alt="Barbershop Borodinski room">
             </a>
           </figure>
           <a class="btn btn--prev" href="#">Назад</a>
